test HACS validation

--- a/.github/workflows/hacs_validation.yaml
+++ b/.github/workflows/hacs_validation.yaml
@@ -15,5 +15,5 @@ jobs:
     steps:
       - name: HACS validation
         uses: "hacs/action@main"
-        with:
-          category: "integration"
+        # with:
+        #   category: "integration"
