change domain name

--- a/custom_components/leneda/manifest.json
+++ b/custom_components/leneda/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "leneda_power",
+  "domain": "leneda",
   "name": "Leneda Power",
   "codeowners": ["@magiczoom2"],
   "config_flow": true,
