change name to Leneda

--- a/custom_components/leneda/manifest.json
+++ b/custom_components/leneda/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "leneda",
-  "name": "Leneda Power",
+  "name": "Leneda",
   "codeowners": ["@magiczoom2"],
   "config_flow": true,
   "dependencies": ["recorder"],
