--- a/.github/workflows/release_assets.yaml
+++ b/.github/workflows/release_assets.yaml
@@ -2,7 +2,7 @@ name: Release Leneda Asset
 
 on:
   release:
-    types: [published]
+    types: [prereleased, released]
 
 permissions:
   contents: write
