--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,12 +24,11 @@ jobs:
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-test.txt
+          python -m pip install -r requirements-test.txt
       
       - name: Run tests with coverage
         run: |
-          pytest --cov=custom_components/leneda --cov-report=xml --cov-report=term-missing
+          python -m pytest --cov=custom_components/leneda --cov-report=xml --cov-report=term-missing
       
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
